Revision history for MooseX-AttributeShortcuts

{{$NEXT}}
	* Redo a number of tests, to improve coverage and deal with the IMPENDING
	  DOOM of . in @INC
	* Add a "history" note referencing lazy_build

0.028     2015-04-07 20:45:00 PDT-0700
	* 0.028.  *le sigh*

0.027_02  2015-04-07 20:43:17 PDT-0700
	* Moose 1.14 is now the minimum supported Moose.

0.027_01  2015-03-28 22:02:17 PDT-0700
	* Break out our $_process_options into more... succinct... methods.
	* Add Moo-style type constraints.

0.027     2015-03-10 19:27:06 PDT-0700
	* Stop using autobox, after relentless persecution by The Cabal ;)
	* Push out our warnings for those using undocumented bits, as we haven't
	  released a non-dev/trial version in *ages*

0.026-TRIAL  2014-12-02 19:52:59 PST-0800
	* Keep our comments dumb, even in tests. (thanks, @haarg!)

0.025-TRIAL  2014-05-22 12:51:25 PDT-0700
	* This is a TRIAL release, as I'm not entirely sure of the wisdom and
	  implementation of the following.
	* Allow for the creation of additional associated methods by hijacking the
	  delegation system, a la native traits: handles => { ... => sub { ... } }

0.024     2014-05-02 12:50:57 PDT-0700
	* Make the undocumented isa_* options "deprecated" ...which seems like
	  better karma than no warning, as people really shouldn't be using these
	  anyways, but better nice than to have it done to me someday :)

0.023     2014-04-04 21:23:33 PDT-0700
	* Add isa_instance_of attribute option.

0.022     2013-09-29 00:08:39 PDT-0700
	* No code changes -- released with refreshed test suite

0.021     2013-09-08 23:32:09 PDT-0700
	* Drop MXCPA entirely, and incorporate the subtyping functionality

0.020_01  2013-08-26 13:33:44 PDT-0700
	* Keep MXCPA quiet, for now.  This is evil (hence the dev release), but
	  should keep things status-quo until we properly integrate MXCPA
	  functionality into MXAS proper.

0.020     2013-08-19 21:51:02 PDT-0700
	* Bump CoercePerAttribute version requirement to 1.000 and update docs
